# uvn

./: LICENSE  README.md  pyproject.toml  uvn.py
src/uvn/: __init__.py  cli.py  core.py
