[project]
name = "uvn"
description = "uvn is conda for uv; a centralized Python virtual environment manager."
keywords = ["uvn", "uv", "conda", "venv", "virtualenv", "uvenv"]
authors = [
    { name = "Modar M. Alfadly", email = "modar.alfadly@gmail.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.12.5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/xmodar/uvn"

[project.scripts]
uvn = "uvn:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "uvn.py"
